# Rust

./: README.md
lab01/src/: main.rs
lab02/src/: main.rs
lab03/src/: enums.rs  main.rs  quick_math.rs
lab04/src/: input_for_p3  input_for_p4  main.rs
lab05/: Cargo.toml
lab05/src/: bonus  bonus.rs  canvas.rs  main.rs  students.json
lab06/: Cargo.toml
lab06/src/: input  main.rs
lab07/src/: main.rs
lab08/src/: main.rs
lab09/: Cargo.toml
lab09/base64/src/: lib.rs
lab09/encoder/: Cargo.toml
lab09/encoder/src/: main.rs
lab10/src/: main.rs
opt_contest_1/: Cargo.toml
opt_contest_1/src/: main.rs
project_k9/: Cargo.toml
project_k9/src/: Doctor_Who_CSV.csv  helper.rs  main.rs
