[package]
name = "project_k9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1 ", features = ["full"] }
serenity = { default-features = true, version = "0.12.0" }
rand = "0.8"
image = "0.24.7"
lazy_static = "1.4"
strsim = "0.10.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }